load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

package(
    default_applicable_licenses = ["//:license"],
    licenses = ["notice"],
)

# =============================================================================
# Dataplane gRPC service (packet injection + result observation)
# =============================================================================

proto_library(
    name = "dataplane_proto",
    srcs = ["dataplane.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//simulator:simulator_proto",
        "@p4runtime//proto/p4/config/v1:p4info_proto",
        "@p4runtime//proto/p4/v1:p4runtime_proto",
    ],
)

java_proto_library(
    name = "dataplane_java_proto",
    visibility = ["//visibility:public"],
    deps = [":dataplane_proto"],
)

# Public API for external C++ consumers of the dataplane service — kept
# despite having no in-repo reverse deps.
cc_proto_library(
    name = "dataplane_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":dataplane_proto"],
)

cc_grpc_library(
    name = "dataplane_cc_grpc",
    srcs = [":dataplane_proto"],
    # cc_grpc_library's generated code #includes many grpcpp headers without
    # declaring them as deps on the generated target — out of our control.
    features = ["-layering_check"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":dataplane_cc_proto"],
)

java_grpc_library(
    name = "dataplane_java_grpc",
    srcs = [":dataplane_proto"],
    visibility = ["//visibility:public"],
    deps = [":dataplane_java_proto"],
)

kt_jvm_grpc_library(
    name = "dataplane_kt_grpc",
    srcs = [":dataplane_proto"],
    visibility = ["//visibility:public"],
    deps = [":dataplane_java_proto"],
)

# =============================================================================
# P4Runtime gRPC stubs (Kotlin)
# =============================================================================

# Java gRPC stubs for P4Runtime service. (Java proto wrappers live
# in //simulator, not here.)
java_grpc_library(
    name = "p4runtime_java_grpc",
    srcs = ["@p4runtime//proto/p4/v1:p4runtime_proto"],
    deps = ["//simulator:p4runtime_java_proto"],
)

# Kotlin gRPC stubs — coroutine-based service base class and client stub.
kt_jvm_grpc_library(
    name = "p4runtime_kt_grpc",
    srcs = ["@p4runtime//proto/p4/v1:p4runtime_proto"],
    deps = ["//simulator:p4runtime_java_proto"],
)

# =============================================================================
# P4Runtime server library
# =============================================================================

kt_jvm_library(
    name = "p4runtime",
    srcs = glob(
        ["*.kt"],
        exclude = [
            "*Test.kt",
            "*TestHarness.kt",
            "*Benchmark.kt",
        ],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":constraint_validator_java_proto",
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime_kt_grpc",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:p4types_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_netty",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
    ],
)

kt_jvm_binary(
    name = "p4runtime_server",
    main_class = "fourward.p4runtime.P4RuntimeServerKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":p4runtime"],
)

# Self-contained fat JAR for distribution. Allows running the server with
# `java -jar p4runtime_server_jar_deploy.jar` without needing Bazel runfiles.
java_binary(
    name = "p4runtime_server_jar",
    main_class = "fourward.p4runtime.P4RuntimeServerKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":p4runtime"],
)

# =============================================================================
# Tests
# =============================================================================

kt_jvm_test(
    name = "P4RuntimeConformanceTest",
    srcs = [
        "P4RuntimeConformanceTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        "//e2e_tests/basic_table",
        "//e2e_tests/passthrough",
        "//e2e_tests/trace_tree:action_selector_3",
        "//e2e_tests/trace_tree:clone_with_egress",
    ],
    test_class = "fourward.p4runtime.P4RuntimeConformanceTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:p4types_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
    ],
)

kt_jvm_test(
    name = "P4RuntimeWriteErrorTest",
    srcs = [
        "P4RuntimeTestHarness.kt",
        "P4RuntimeWriteErrorTest.kt",
    ],
    data = [
        "//e2e_tests/basic_table",
        "//e2e_tests/trace_tree:action_selector_3",
    ],
    test_class = "fourward.p4runtime.P4RuntimeWriteErrorTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
    ],
)

kt_jvm_test(
    name = "GoldenErrorTest",
    srcs = [
        "GoldenErrorTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        ":constraint_validator",
        "//e2e_tests/basic_table",
        "//e2e_tests/constrained_table",
        "//e2e_tests/golden_errors:action_profile",
        "//e2e_tests/golden_errors:range_table",
        "//e2e_tests/golden_errors:refers_to",
        "//e2e_tests/golden_errors:stateful",
        "//e2e_tests/golden_errors:value_set",
        "//e2e_tests/lpm_routing",
        "//e2e_tests/passthrough",
        "//e2e_tests/ternary_acl",
        "//e2e_tests/trace_tree:action_selector_3",
        "//e2e_tests/trace_tree:clone_with_egress",
        "//e2e_tests/translated_type",
    ] + glob(["golden_errors/*.golden.txt"]),
    test_class = "fourward.p4runtime.GoldenErrorTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "WriteValidatorTest",
    srcs = ["WriteValidatorTest.kt"],
    test_class = "fourward.p4runtime.WriteValidatorTest",
    deps = [
        ":p4runtime",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "EntityReaderTest",
    srcs = ["EntityReaderTest.kt"],
    test_class = "fourward.p4runtime.EntityReaderTest",
    deps = [
        ":p4runtime",
        "//simulator",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "ReferenceValidatorTest",
    srcs = ["ReferenceValidatorTest.kt"],
    test_class = "fourward.p4runtime.ReferenceValidatorTest",
    deps = [
        ":p4runtime",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "RoleMapTest",
    srcs = ["RoleMapTest.kt"],
    test_class = "fourward.p4runtime.RoleMapTest",
    deps = [
        ":p4runtime",
        "//simulator:p4info_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "TraceEnricherTest",
    srcs = ["TraceEnricherTest.kt"],
    test_class = "fourward.p4runtime.TraceEnricherTest",
    deps = [
        ":p4runtime",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:p4types_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "TypeTranslatorTest",
    srcs = ["TypeTranslatorTest.kt"],
    test_class = "fourward.p4runtime.TypeTranslatorTest",
    deps = [
        ":p4runtime",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:p4types_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "ConstraintValidatorTest",
    srcs = ["ConstraintValidatorTest.kt"],
    data = [
        ":constraint_validator",
        "//e2e_tests/basic_table",
        "//e2e_tests/constrained_table",
    ],
    test_class = "fourward.p4runtime.ConstraintValidatorTest",
    deps = [
        ":p4runtime",
        "//bazel:runfiles",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

# =============================================================================
# Constraint validator (p4-constraints subprocess)
# =============================================================================

proto_library(
    name = "constraint_validator_proto",
    srcs = ["constraint_validator.proto"],
    deps = [
        "@p4runtime//proto/p4/config/v1:p4info_proto",
        "@p4runtime//proto/p4/v1:p4runtime_proto",
    ],
)

java_proto_library(
    name = "constraint_validator_java_proto",
    deps = [":constraint_validator_proto"],
)

cc_proto_library(
    name = "constraint_validator_cc_proto",
    deps = [":constraint_validator_proto"],
)

cc_binary(
    name = "constraint_validator",
    srcs = ["constraint_validator.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":constraint_validator_cc_proto",
        "@p4_constraints//p4_constraints/backend:constraint_info",
        "@p4_constraints//p4_constraints/backend:interpreter",
    ],
)

# =============================================================================
# Tests
# =============================================================================

kt_jvm_test(
    name = "P4RuntimeServiceTest",
    srcs = [
        "P4RuntimeServiceTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    test_class = "fourward.p4runtime.P4RuntimeServiceTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "P4RuntimeConstraintTest",
    srcs = [
        "P4RuntimeConstraintTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        ":constraint_validator",
        "//e2e_tests/basic_table",
        "//e2e_tests/constrained_table",
    ],
    test_class = "fourward.p4runtime.P4RuntimeConstraintTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "EnrichedTraceGoldenTest",
    srcs = [
        "EnrichedTraceGoldenTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        "enriched_trace.golden.txtpb",
        "//e2e_tests/translated_port",
    ],
    test_class = "fourward.p4runtime.EnrichedTraceGoldenTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "P4RuntimeTranslationTest",
    srcs = [
        "P4RuntimeTestHarness.kt",
        "P4RuntimeTranslationTest.kt",
    ],
    data = [
        "//e2e_tests/translated_type",
    ],
    test_class = "fourward.p4runtime.P4RuntimeTranslationTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "PacketBrokerTest",
    srcs = ["PacketBrokerTest.kt"],
    test_class = "fourward.p4runtime.PacketBrokerTest",
    deps = [
        ":dataplane_java_proto",
        ":p4runtime",
        "//simulator",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)

kt_jvm_test(
    name = "DataplaneServiceTest",
    srcs = [
        "DataplaneServiceTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        "//e2e_tests/basic_table",
        "//e2e_tests/passthrough",
    ],
    test_class = "fourward.p4runtime.DataplaneServiceTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "PacketHeaderCodecTest",
    srcs = ["PacketHeaderCodecTest.kt"],
    test_class = "fourward.p4runtime.PacketHeaderCodecTest",
    deps = [
        ":p4runtime",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "DataplaneBenchmark",
    srcs = [
        "DataplaneBenchmark.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        "//e2e_tests/sai_p4:sai_middleblock",
    ],
    tags = ["heavy"],
    test_class = "fourward.p4runtime.DataplaneBenchmark",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "SaiP4E2ETest",
    srcs = [
        "P4RuntimeTestHarness.kt",
        "SaiP4E2ETest.kt",
    ],
    data = [
        "//e2e_tests/sai_p4:sai_middleblock",
    ],
    test_class = "fourward.p4runtime.SaiP4E2ETest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:p4types_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "SaiP4ConstraintTest",
    srcs = [
        "P4RuntimeTestHarness.kt",
        "SaiP4ConstraintTest.kt",
    ],
    data = [
        ":constraint_validator",
        "//e2e_tests/sai_p4:sai_middleblock",
    ],
    test_class = "fourward.p4runtime.SaiP4ConstraintTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)
