load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_applicable_licenses = ["//:license"],
    licenses = ["notice"],
)

cc_library(
    name = "fourward_server",
    srcs = ["fourward_server.cc"],
    hdrs = ["fourward_server.h"],
    data = ["//p4runtime:p4runtime_server"],
    # Runfile path baked in per build for BCR portability — the apparent
    # repo name differs between root and BCR consumers.
    local_defines = [
        'FOURWARD_SERVER_RLOCATION=\\"$(rlocationpath //p4runtime:p4runtime_server)\\"',
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//p4runtime:dataplane_cc_grpc",
        "//p4runtime:dataplane_cc_proto",
        "@abseil-cpp//absl/cleanup",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
        "@bazel_tools//tools/cpp/runfiles",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)

cc_test(
    name = "fourward_server_test",
    srcs = ["fourward_server_test.cc"],
    deps = [
        ":fourward_server",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)
