load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

# =============================================================================
# Proto
# =============================================================================

# strip_import_prefix = "/simulator" lets other protos use `import "ir.proto"`
# instead of the full workspace-relative path.
proto_library(
    name = "ir_proto",
    srcs = ["ir.proto"],
    strip_import_prefix = "/simulator",
    visibility = ["//visibility:public"],
    deps = [
        "@p4runtime//proto/p4/config/v1:p4info_proto",
        "@p4runtime//proto/p4/v1:p4runtime_proto",
    ],
)

java_proto_library(
    name = "ir_java_proto",
    visibility = ["//visibility:public"],
    deps = [":ir_proto"],
)

cc_proto_library(
    name = "ir_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":ir_proto"],
)

proto_library(
    name = "simulator_proto",
    srcs = ["simulator.proto"],
    strip_import_prefix = "/simulator",
    visibility = ["//visibility:public"],
    deps = [
        ":ir_proto",
        "@p4runtime//proto/p4/v1:p4runtime_proto",
    ],
)

java_proto_library(
    name = "simulator_java_proto",
    visibility = ["//visibility:public"],
    deps = [":simulator_proto"],
)

# The p4runtime BCR module only ships cc/go/py proto targets; we generate the
# Java ones ourselves so the Kotlin simulator can import p4runtime classes.
java_proto_library(
    name = "p4runtime_java_proto",
    visibility = ["//visibility:public"],
    deps = ["@p4runtime//proto/p4/v1:p4runtime_proto"],
)

# =============================================================================
# Kotlin simulator
# =============================================================================

kt_jvm_library(
    name = "simulator_lib",
    srcs = glob(
        ["*.kt"],
        exclude = ["*Test.kt"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":ir_java_proto",
        ":p4runtime_java_proto",
        ":simulator_java_proto",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_kotlin",
    ],
)

# =============================================================================
# Test utilities
# =============================================================================

kt_jvm_library(
    name = "interpreter_test_dsl",
    testonly = True,
    srcs = ["InterpreterTestDsl.kt"],
    deps = [":ir_java_proto"],
)

# =============================================================================
# Unit tests (colocated with source per Google convention)
# =============================================================================

kt_jvm_test(
    name = "HashTest",
    srcs = ["HashTest.kt"],
    test_class = "fourward.simulator.HashTest",
    deps = [
        ":simulator_lib",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "BitVectorTest",
    srcs = ["BitVectorTest.kt"],
    test_class = "fourward.simulator.BitVectorTest",
    deps = [
        ":simulator_lib",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "MatchesFieldMatchTest",
    srcs = ["MatchesFieldMatchTest.kt"],
    test_class = "fourward.simulator.MatchesFieldMatchTest",
    deps = [
        ":simulator_lib",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "InterpreterExprTest",
    srcs = ["InterpreterExprTest.kt"],
    test_class = "fourward.simulator.InterpreterExprTest",
    deps = [
        ":interpreter_test_dsl",
        ":ir_java_proto",
        ":simulator_lib",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "InterpreterControlTest",
    srcs = ["InterpreterControlTest.kt"],
    test_class = "fourward.simulator.InterpreterControlTest",
    deps = [
        ":interpreter_test_dsl",
        ":ir_java_proto",
        ":simulator_lib",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "TableStoreTest",
    srcs = ["TableStoreTest.kt"],
    test_class = "fourward.simulator.TableStoreTest",
    deps = [
        ":p4runtime_java_proto",
        ":simulator_lib",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "InterpreterPacketTest",
    srcs = ["InterpreterPacketTest.kt"],
    test_class = "fourward.simulator.InterpreterPacketTest",
    deps = [
        ":interpreter_test_dsl",
        ":ir_java_proto",
        ":simulator_lib",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "EnvironmentTest",
    srcs = ["EnvironmentTest.kt"],
    test_class = "fourward.simulator.EnvironmentTest",
    deps = [
        ":simulator_java_proto",
        ":simulator_lib",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "InterpreterInlineActionTest",
    srcs = ["InterpreterInlineActionTest.kt"],
    test_class = "fourward.simulator.InterpreterInlineActionTest",
    deps = [
        ":interpreter_test_dsl",
        ":ir_java_proto",
        ":simulator_lib",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "PSAArchitectureTest",
    srcs = ["PSAArchitectureTest.kt"],
    test_class = "fourward.simulator.PSAArchitectureTest",
    deps = [
        ":interpreter_test_dsl",
        ":ir_java_proto",
        ":p4runtime_java_proto",
        ":simulator_java_proto",
        ":simulator_lib",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "V1ModelArchitectureTest",
    srcs = ["V1ModelArchitectureTest.kt"],
    test_class = "fourward.simulator.V1ModelArchitectureTest",
    deps = [
        ":interpreter_test_dsl",
        ":ir_java_proto",
        ":p4runtime_java_proto",
        ":simulator_java_proto",
        ":simulator_lib",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "InterpreterParserTest",
    srcs = ["InterpreterParserTest.kt"],
    associates = [":simulator_lib"],
    test_class = "fourward.simulator.InterpreterParserTest",
    deps = [
        ":interpreter_test_dsl",
        ":ir_java_proto",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "DefaultValuesTest",
    srcs = ["DefaultValuesTest.kt"],
    associates = [":simulator_lib"],
    test_class = "fourward.simulator.DefaultValuesTest",
    deps = [
        ":interpreter_test_dsl",
        ":ir_java_proto",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "SimulatorTest",
    srcs = ["SimulatorTest.kt"],
    test_class = "fourward.simulator.SimulatorTest",
    deps = [
        ":ir_java_proto",
        ":p4runtime_java_proto",
        ":simulator_java_proto",
        ":simulator_lib",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "InterpreterTraceEventTest",
    srcs = ["InterpreterTraceEventTest.kt"],
    test_class = "fourward.simulator.InterpreterTraceEventTest",
    deps = [
        ":interpreter_test_dsl",
        ":ir_java_proto",
        ":simulator_java_proto",
        ":simulator_lib",
        "@maven//:junit_junit",
    ],
)
