load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

# STF (Simple Test Framework) parser and runner. STF is a test-input format
# originating with BMv2's simple_switch; 4ward supports it as a first-class
# format for driving the simulator from both the `4ward sim` CLI and from
# end-to-end tests. Hence this is a production library, not testonly.
kt_jvm_library(
    name = "stf",
    srcs = ["Runner.kt"],
    visibility = ["//visibility:public"],
    deps = [
        "//simulator:ir_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "//simulator:simulator_lib",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:com_google_protobuf_protobuf_kotlin",
    ],
)

kt_jvm_test(
    name = "StfParserTest",
    srcs = ["StfParserTest.kt"],
    test_class = "fourward.stf.StfParserTest",
    deps = [
        ":stf",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "RunnerTest",
    srcs = ["RunnerTest.kt"],
    test_class = "fourward.stf.RunnerTest",
    deps = [
        ":stf",
        "@fourward_maven//:junit_junit",
    ],
)
